fix title on small screen

--- a/projects.css
+++ b/projects.css
@@ -101,3 +101,9 @@ html {
     }
 
 }
+
+@media only screen and (max-width: 430px) {
+    #projects-title {
+        font-size: 15vw
+    }
+}
